--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-gray-100">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body class="mx-auto w-2/3 bg-white p-8 rounded-lg mt-10">
         {% block body %}{% endblock %}
     </body>
 </html>
